--- a/Fantasy-Games/src/main/resources/application-windows.yml
+++ b/Fantasy-Games/src/main/resources/application-windows.yml
@@ -21,3 +21,7 @@ download: # 文件下载地址
 
 linuxImg: # linux 下的图片存放路径
   url: C:\Users\keda\Pictures\upload\
+
+fileUpload:
+  uploadUrl: http://106.14.45.117:8055/common/upload/upload/
+  downloadUrl: http://106.14.45.117:8055/common/upload/download?name=
