--- a/Fantasy-Games/pom.xml
+++ b/Fantasy-Games/pom.xml
@@ -62,16 +62,18 @@
             <artifactId>mybatis-plus</artifactId>
             <version>3.5.1</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.baomidou</groupId>-->
-<!--            <artifactId>mybatis-plus-generator</artifactId>-->
-<!--            <version>3.5.1</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.velocity</groupId>-->
-<!--            <artifactId>velocity</artifactId>-->
-<!--            <version>1.7</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.5.1</version>
+<!--            <scope>test</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+<!--            <scope>test</scope>-->
+        </dependency>
         <!--可以选择加入的日志依赖-->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -144,7 +146,21 @@
             <artifactId>yauaa</artifactId>
             <version>5.20</version>
         </dependency>
-        
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba/dashscope-sdk-java -->
+        <!-- 通义api -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dashscope-sdk-java</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+
+        <!-- Word分词器 -->
+        <dependency>
+            <groupId>org.apdplat</groupId>
+            <artifactId>word</artifactId>
+            <version>1.2</version>
+        </dependency>
 
 
     </dependencies>
