--- a/blog-view/package.json
+++ b/blog-view/package.json
@@ -27,7 +27,9 @@
     "@vue/cli-plugin-router": "4.4.0",
     "@vue/cli-plugin-vuex": "4.4.0",
     "@vue/cli-service": "4.4.0",
-    "vue-template-compiler": "2.6.11"
+    "vue-template-compiler": "2.6.11",
+    "sass": "1.26.8",
+    "sass-loader": "8.0.2"
   },
   "browserslist": [
     "> 1%",
