--- a/Fantasy-Games/src/main/resources/application-windows.yml
+++ b/Fantasy-Games/src/main/resources/application-windows.yml
@@ -3,7 +3,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://106.14.45.117:3306/fantasy-games?useUnicode=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://101.34.137.166:3306/fantasy-games?useUnicode=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf-8&useSSL=false
     username: root
     password:
 
@@ -15,16 +15,12 @@ upload:
   resources:
     locations: file:${upload.path}
 
-download: # 文件下载地址
-  #  url: http://127.0.0.1:8091/mhs/article/download?name=
-  url: http://106.14.45.117:8090/admin/download?name=
-
-linuxImg: # linux 下的图片存放路径
-  url: C:\Users\keda\Pictures\upload\
-
 fileUpload:
-  uploadUrl: http://106.14.45.117:8055/common/upload/upload/
-  downloadUrl: http://106.14.45.117:8055/common/upload/download?name=
+  # windows 下的图片存放路径
+  dir: C:\Users\keda\Pictures\upload\
+  # 文件上传地址
+  uploadUrl: http://101.34.137.166:8055/common/upload/upload/
+  downloadUrl: http://101.34.137.166:8055/common/upload/download?name=
 
 # 通义api配置
 tongyi:
