--- a/Fantasy-Games/src/main/resources/application-linux.yml
+++ b/Fantasy-Games/src/main/resources/application-linux.yml
@@ -3,7 +3,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://101.34.137.166:3306/fantasy-games?useUnicode=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/fantasy-games?useUnicode=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf-8&useSSL=false
     username: root
     password:
 
@@ -19,8 +19,8 @@ fileUpload:
   # linux 下的图片存放路径
   dir: /usr/local/java/fantasy-games/upload/
   # 文件上传地址
-  uploadUrl: http://101.34.137.166:8055/common/upload
-  downloadUrl: http://101.34.137.166:8055/common/download?name=
+  uploadUrl: http://localhost:8055/common/upload
+  downloadUrl: http://localhost:8055/common/download?name=
 
 # 通义api配置
 tongyi:
